Update api sdk version handling