@@ -1,4 +1,5 @@
 plugins {
+    // https://github.com/johnrengelman/shadow
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
     id 'application'
@@ -51,13 +52,4 @@ class EnhanceVersion { static final String NAME = \"${version}\"; }
 
 sourceSets {
     main.java.srcDirs += new File(rootDir, 'gen')
-}
-
-compileJava {
-    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
-    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
-    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
-    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
-    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
 }
